feat(linux): redesign work details and viewer tracking
